[package]
name = "avrtos-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["avrtos-linker-script", "qemu"]
avrtos-linker-script = []
qemu = ["debug"]
debug = []

[dependencies]

[build-dependencies]
cc = "1.1"
bindgen = "0.71.1"