if (NOT QEMU AND ${FEATURE_USART_COUNT} GREATER 1)

	project(sample_drv_i2c_tcn75)
	add_executable(${PROJECT_NAME} main.c)

	# AVRTOS Configuration
	target_compile_definitions(${PROJECT_NAME} PUBLIC
		CONFIG_THREAD_MAIN_STACK_SIZE=0x200
		CONFIG_THREAD_CANARIES=1
		CONFIG_KERNEL_DEBUG=0
		CONFIG_KERNEL_SCHEDULER_DEBUG=0
		CONFIG_KERNEL_ASSERT=0
		CONFIG_STDIO_PRINTF_TO_USART=0
		CONFIG_KERNEL_THREAD_IDLE_ADD_STACK=50
		CONFIG_SYSTEM_WORKQUEUE_ENABLE=0
		CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=0x200
		CONFIG_AVRTOS_BANNER_ENABLE=1
		CONFIG_SERIAL_AUTO_INIT=1
		CONFIG_KERNEL_UPTIME=1

		CONFIG_I2C_INTERRUPT_DRIVEN=1
	)

	target_link_avrtos(${PROJECT_NAME})

	target_prepare_env(${PROJECT_NAME})

endif()