if (NOT QEMU AND ${FEATURE_TIMER_COUNT} GREATER 3)

	project(sample_drv_timers_pwm)
	add_executable(${PROJECT_NAME} main.c)

	# AVRTOS Configuration
	target_compile_definitions(${PROJECT_NAME} PUBLIC
		CONFIG_KERNEL_COOPERATIVE_THREADS=1
		CONFIG_DEFAULT_KERNEL_SYSCLOCK_PERIOD_US=100000
		CONFIG_KERNEL_TIME_SLICE_US=100000
		CONFIG_KERNEL_SYSLOCK_HW_TIMER=3
		
		CONFIG_THREAD_CANARIES=1

		CONFIG_KERNEL_THREAD_IDLE=1
		CONFIG_THREAD_EXPLICIT_MAIN_STACK=1
		CONFIG_THREAD_MAIN_STACK_SIZE=1024
		
		CONFIG_STDIO_PRINTF_TO_USART=0
		
		CONFIG_INTERRUPT_POLICY=1

		CONFIG_KERNEL_SYSCLOCK_DEBUG=0
		CONFIG_KERNEL_SCHEDULER_DEBUG=0
	)

	target_link_avrtos(${PROJECT_NAME})

	target_prepare_env(${PROJECT_NAME})

endif()