project(sample_events)
add_executable(${PROJECT_NAME} main.c)

# AVRTOS Configuration
target_compile_definitions(${PROJECT_NAME} PUBLIC
	CONFIG_KERNEL_THREAD_IDLE=0
	CONFIG_THREAD_EXPLICIT_MAIN_STACK=1
	CONFIG_THREAD_MAIN_STACK_SIZE=0x80
	CONFIG_STDIO_PRINTF_TO_USART=0
	CONFIG_KERNEL_TIMERS=0
	CONFIG_KERNEL_UPTIME=1
	CONFIG_KERNEL_EVENTS=1
	CONFIG_KERNEL_TIME_SLICE_US=1000
	CONFIG_KERNEL_SYSCLOCK_DEBUG=0
	CONFIG_KERNEL_SCHEDULER_DEBUG=0
	CONFIG_THREAD_STACK_SENTINEL=1
	CONFIG_KERNEL_API_NOINLINE=1

)

target_link_avrtos(${PROJECT_NAME})

target_prepare_env(${PROJECT_NAME})
