project(sample_flags)
add_executable(${PROJECT_NAME} main.c)

# AVRTOS Configuration
target_compile_definitions(${PROJECT_NAME} PUBLIC
	CONFIG_KERNEL_COOPERATIVE_THREADS=1
	CONFIG_DEFAULT_KERNEL_SYSCLOCK_PERIOD_US=250000
	CONFIG_KERNEL_TIME_SLICE_US=250000

	CONFIG_STDIO_USART=0
	
	CONFIG_THREAD_CANARIES=1

	CONFIG_KERNEL_THREAD_IDLE=1
	CONFIG_THREAD_EXPLICIT_MAIN_STACK=1
	CONFIG_THREAD_MAIN_STACK_SIZE=512

	CONFIG_INTERRUPT_POLICY=1

	CONFIG_KERNEL_ASSERT=1

	CONFIG_KERNEL_SYSCLOCK_DEBUG=0
	CONFIG_KERNEL_SCHEDULER_DEBUG=0
)

target_link_avrtos(${PROJECT_NAME})

target_prepare_env(${PROJECT_NAME})
