project(sample_footprint)
add_executable(${PROJECT_NAME} main.c)

set(CMAKE_BUILD_TYPE Release)

# AVRTOS Configuration
target_compile_definitions(${PROJECT_NAME} PUBLIC
	CONFIG_KERNEL_ASSERT=0
	CONFIG_KERNEL_DEBUG=0
	CONFIG_KERNEL_THREAD_IDLE=0

	CONFIG_THREAD_EXPLICIT_MAIN_STACK=0
	CONFIG_STDIO_PRINTF_TO_USART=-1

	CONFIG_KERNEL_UPTIME=1
	CONFIG_INTERRUPT_POLICY=1
	
	CONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
	CONFIG_KERNEL_TIME_SLICE_US=1000
)

target_link_avrtos(${PROJECT_NAME})

target_prepare_env(${PROJECT_NAME})
