project(sample_footprint)
add_executable(${PROJECT_NAME} main.c)

if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
	message(WARNING "Build in Release mode for a smaller footprint")
endif()

# AVRTOS Configuration
target_compile_definitions(${PROJECT_NAME} PUBLIC
	CONFIG_KERNEL_SYSCLOCK_DEBUG=0
	CONFIG_KERNEL_THREAD_IDLE=0

	# CONFIG_AVRTOS_LINKER_SCRIPT=0

	CONFIG_THREAD_EXPLICIT_MAIN_STACK=0
	CONFIG_STDIO_PRINTF_TO_USART=-1

	CONFIG_KERNEL_UPTIME=1
	CONFIG_INTERRUPT_POLICY=1
	
	CONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
	CONFIG_KERNEL_TIME_SLICE_US=1000

	CONFIG_KERNEL_FAULT_VERBOSITY=0
)

target_link_avrtos(${PROJECT_NAME})

target_prepare_env(${PROJECT_NAME})
