project(sample_idle)
add_executable(${PROJECT_NAME} main.c)

# AVRTOS Configuration
target_compile_definitions(${PROJECT_NAME} PUBLIC
	CONFIG_KERNEL_INIT_DEBUG_THREADS=1

	CONFIG_KERNEL_THREAD_IDLE=0
	CONFIG_THREAD_IDLE_COOPERATIVE=0
	
	CONFIG_KERNEL_SYSCLOCK_PERIOD_US=10000
	CONFIG_KERNEL_TIME_SLICE_US=10000
	CONFIG_KERNEL_SYSCLOCK_DEBUG=0
	CONFIG_KERNEL_SCHEDULER_DEBUG=0
	
	CONFIG_KERNEL_UPTIME=0

	CONFIG_KERNEL_ASSERT=1
)

target_link_avrtos(${PROJECT_NAME})

target_prepare_env(${PROJECT_NAME})
