if (${FEATURE_TIMER_COUNT} GREATER 3)

	project(sample_isr_unpend)
	add_executable(${PROJECT_NAME} main.c)

	# AVRTOS Configuration
	target_compile_definitions(${PROJECT_NAME} PUBLIC
		CONFIG_KERNEL_DEBUG=0
		CONFIG_KERNEL_SCHEDULER_DEBUG=0

		CONFIG_INTERRUPT_POLICY=1
		CONFIG_KERNEL_SYSCLOCK_PERIOD_US=400000
		CONFIG_KERNEL_TIME_SLICE_US=400000
		CONFIG_KERNEL_SYSLOCK_HW_TIMER=1

		CONFIG_THREAD_CANARIES=1
		CONFIG_KERNEL_SYSTICK_GPIOB_DEBUG=0x40

		# CONFIG_THREAD_IDLE_COOPERATIVE=1
	)

	target_link_avrtos(${PROJECT_NAME})

	target_prepare_env(${PROJECT_NAME})

endif()
