if (NOT ${CMAKE_BUILD_TYPE} STREQUAL "Debug")
	project(sample_main_stack)
	add_executable(${PROJECT_NAME} main.c utils.s)

	# AVRTOS Configuration
	target_compile_definitions(${PROJECT_NAME} PUBLIC
		CONFIG_KERNEL_COOPERATIVE_THREADS=1
		CONFIG_DEFAULT_KERNEL_SYSCLOCK_PERIOD_US=10000
		CONFIG_KERNEL_TIME_SLICE_US=10000
		
		CONFIG_THREAD_CANARIES=1

		CONFIG_KERNEL_THREAD_IDLE=0
		CONFIG_THREAD_EXPLICIT_MAIN_STACK=1
		CONFIG_THREAD_MAIN_STACK_SIZE=1024

		CONFIG_INTERRUPT_POLICY=1

		CONFIG_KERNEL_ASSERT=0

		CONFIG_KERNEL_DEBUG=0
		CONFIG_KERNEL_SCHEDULER_DEBUG=0
	)

	target_link_avrtos(${PROJECT_NAME})

	target_prepare_env(${PROJECT_NAME})
endif()
