project(sample_mutex_multithreading_demo)
add_executable(${PROJECT_NAME} main.c)

# AVRTOS Configuration
target_compile_definitions(${PROJECT_NAME} PUBLIC
	CONFIG_KERNEL_COOPERATIVE_THREADS=1
	CONFIG_THREAD_MAIN_COOPERATIVE=0
	CONFIG_KERNEL_TIME_SLICE_US=16000
	CONFIG_KERNEL_SYSCLOCK_DEBUG=0
	CONFIG_KERNEL_SCHEDULER_DEBUG=0
	CONFIG_KERNEL_THREAD_IDLE=0
	CONFIG_KERNEL_ASSERT=1
)

target_link_avrtos(${PROJECT_NAME})

target_prepare_env(${PROJECT_NAME})
