project(sample_mem_slab)
add_executable(${PROJECT_NAME} main.c)

# AVRTOS Configuration
target_compile_definitions(${PROJECT_NAME} PUBLIC
	CONFIG_KERNEL_DEBUG=1
	CONFIG_KERNEL_SCHEDULER_DEBUG=1
	CONFIG_KERNEL_ASSERT=0
	CONFIG_THREAD_CANARIES=1
	CONFIG_STDIO_PRINTF_TO_USART=0
	CONFIG_KERNEL_UPTIME=1
	CONFIG_KERNEL_SCHEDULER_OFFLOAD=1
	CONFIG_THREAD_MAIN_COOPERATIVE=0
	CONFIG_LOGGING_SUBSYSTEM=1

	CONFIG_KERNEL_SYSCLOCK_PERIOD_US=10
	CONFIG_KERNEL_TIME_SLICE_US=10
)

target_link_avrtos(${PROJECT_NAME})

target_prepare_env(${PROJECT_NAME})
